<resources>
    <string name="app_name" translatable="false">Key Mapper</string>
    <string name="slogan">Unleash your keys!</string>
    <string name="no_action_chosen">No action chosen</string>
    <string name="accessibility_service_explanation">Key Mapper requires the use of an accessibility service so that it can detect and change what your button presses do while you are outside of the app. Your key maps will only work once you have enabled the accessibility service. It must also be turned on to create a trigger and test actions.</string>
    <string name="selection_count">%d selected</string>
    <string name="ime_service_label" translatable="false">Key Mapper Basic Input Method</string>
    <string name="enable">Enable</string>
    <string name="open">Open</string>
    <string name="shrug" translatable="false">¯\\_(ツ)_/¯</string>
    <string name="recyclerview_placeholder">¯\\_(ツ)_/¯\n\nNothing here!</string>
    <string name="triggers_recyclerview_placeholder">The first step is to add some buttons that will trigger the key map.\n\nFirst tap ‘Record trigger’ and then press the buttons that you want to remap. They will appear here.\n\nAlternatively, you can trigger a key map using an ‘advanced trigger’.\n\nYou can mix and match any keys!</string>
    <string name="actions_recyclerview_placeholder">Add an action!</string>
    <string name="keymap_recyclerview_placeholder">Create a key map!</string>
    <string name="action_shortcut_list_recyclerview_placeholder">¯\\_(ツ)_/¯\n\nYou haven\'t chosen any actions for this shortcut!</string>
    <string name="no_key_maps">You haven\'t created any key maps!</string>
    <string name="everything_looks_good">Everything looks good!</string>
    <string name="warning_the_app_will_work">The app will work but some things might need fixing depending on what you\'re doing.</string>
    <string name="your_device_doesnt_support_some_actions">Your device doesn\'t support some actions.</string>
    <string name="tab_unsupported_actions">Unsupported actions</string>
    <string name="choose_action_warning_requires_root">Requires root</string>
    <string name="press_dot_dot_dot">Press…</string>
    <string name="no_actions">No actions</string>
    <string name="no_trigger">No trigger</string>
    <string name="middot" translatable="false">•</string>
    <string name="arrow" translatable="false">→</string>
    <string name="plus" translatable="false">+</string>
    <string name="unknown_keycode">Unknown key code: %s</string>
    <string name="unknown_device_name">Unknown device name</string>
    <string name="google_app_package_name" translatable="false">com.google.android.googlequicksearchbox</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="follow_system">Follow system</string>
    <string name="this_device">This device</string>
    <string name="any_device">Any device</string>
    <string name="trigger_device_name_not_found">The name for this device isn\'t known</string>
    <string name="slider_default">Default</string>
    <string name="button_enable_accessibility_service">Enable accessibility service</string>
    <string name="button_restart_accessibility_service">Restart accessibility service</string>
    <string name="share_backup">Share</string>
    <string name="stop_repeating_dot_dot_dot">Stop repeating when…</string>
    <string name="stop_repeating_when_trigger_released">Trigger is released</string>
    <string name="stop_repeating_trigger_pressed_again">Trigger is pressed again</string>
    <string name="stop_repeating_limit_reached">Limit reached</string>
    <string name="stop_repeating_when_swiped_again">Swiped again</string>
    <string name="stop_holding_down_when_trigger_released">Trigger is released</string>
    <string name="stop_holding_down_trigger_pressed_again">Trigger is pressed again</string>
    <string name="show_hidden_apps">Show hidden apps</string>
    <string name="modifiers">Modifiers</string>
    <string name="toggle">Toggle</string>
    <string name="chip_play_store" translatable="false">Play Store</string>
    <string name="chip_fdroid" translatable="false">F-Droid</string>
    <string name="chip_github" translatable="false">GitHub</string>
    <string name="tap_coordinate_screenshot_message">IMPORTANT!!! These coordinates are only correct when your display is in the same orientation as the screenshot! This action will cancel any touches or gestures you are doing on the screen.\n\nIf you need help finding the coordinates of a point on your screen take a screenshot and then tap on the screenshot where you want this action to press.</string>
    <string name="pinch_screen_x_y_note">Note: When using \"pinch in\" X and Y are the END coordinates, when using \"pinch out\" X and Y are the START coordinates.</string>
    <string name="dont_know_device_name">Don\'t know device name!</string>
    <string name="tap_actions_to_fix">Tap actions to fix!</string>
    <string name="tap_constraints_to_fix">Tap constraints to fix!</string>
    <string name="shortcut_label_action">Perform actions</string>
    <string name="hold_down_until_trigger_is_dot_dot_dot">Hold down until trigger is…</string>
    <string name="from_no_device">No device</string>
    <string name="intent_extras_recycler_view_placeholder">¯\\_(ツ)_/¯\n\nNo extras!</string>
    <string name="content_description_fab_new_keymap">Create a new key map</string>
    <string name="content_description_done_configuring_key_event">Done configuring key event action</string>
    <string name="content_description_done_configuring_coordinate">Done picking coordinate</string>
    <string name="clip_key_mapper_log">Key Mapper log</string>
    <string name="sharesheet_title">Send to</string>
    <string name="whats_new">What\'s New</string>
    <string name="caption_action_type_key">Click the key on the device which you want to be entered.
            \n\nIMPORTANT!
            Inputting this key as an action will only work if you are using a Key Mapper compatible keyboard.</string>
    <string name="caption_action_type_keycode">IMPORTANT!
            Inputting this key code as an action will only work if you are using a Key Mapper compatible keyboard.</string>
    <string name="caption_action_type_sound">The sound file will be copied to Key Mapper\'s private data folder, which means your actions will still work even if the file is moved or deleted. It will also be backed up with your key maps in the zip folder.
    You can delete saved sound files in the settings.</string>
    <string name="caption_action_type_text">Type some text you want to be inserted when you perform this action.</string>
    <string name="caption_action_type_phone_call">Enter the phone number.</string>
    <string name="caption_action_type_url">Type a URL which you want to be opened. The http://, https:// or www. isn\'t required.</string>
    <string name="caption_no_paired_bt_devices">Can\'t find any paired devices. Is Bluetooth turned on?</string>
    <string name="caption_create_keymap_shortcut">The \"Allow other apps to trigger this key map\" option will be turned on for the key map that you select if it isn\'t already. If you turn this option off later then any shortcuts or Intents to trigger this key map will not work.</string>
    <string name="switch_enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="reset">Reset</string>
    <string name="exception_accessibility_service" translatable="false">Exception in onKeyEvent. Look in logcat.</string>
    <string name="enable_device_admin_message">Once you have enabled the device admin, you must DEACTIVATE it if you want to uninstall Key Mapper.</string>
    <string name="constraints_recyclerview_placeholder">Add a constraint!</string>
    <string name="action_title_wait">Wait %sms</string>
    <string name="action_title_intent_start_activity">Start activity: %s</string>
    <string name="action_title_intent_start_service">Start service: %s</string>
    <string name="action_title_intent_send_broadcast">Send broadcast: %s</string>
    <string name="clipboard_label_keymap_uid">Key map UUID</string>
    <string name="check_box_key_event_option_use_shell">Use shell (ROOT only)</string>
    <string name="trigger_error_dnd_access_denied">Permission required to work properly in Do Not Disturb mode!</string>
    <string name="trigger_error_screen_off_root_permission_denied">The option to trigger when the screen is off needs root permission to work!</string>
    <string name="trigger_error_screen_off_root_permission_denied_short">Screen off triggers will not work!</string>
    <string name="trigger_error_cant_detect_in_phone_call">This trigger won\'t work while ringing or in a phone call!</string>
    <string name="trigger_error_cant_detect_in_phone_call_explanation">Android doesn\'t let accessibility services detect volume button presses while your phone is ringing or it is in a phone call but it does let input method services detect them. Therefore, you must use one of the Key Mapper keyboards if you want this trigger to work.</string>
    <string name="trigger_error_gesture_stroke_count_too_high">Too many fingers to perform gesture due to android limitations.</string>
    <string name="trigger_error_gesture_duration_too_high">Gesture duration is too high due to android limitations.</string>
    <string name="trigger_error_dpad_ime_not_selected">You must be using a Key Mapper keyboard for DPAD triggers to work!</string>
    <string name="trigger_error_dpad_ime_not_selected_short">DPAD triggers will not work!</string>
    <string name="home_error_is_battery_optimised">Your mappings will stop working randomly!</string>
    <string name="home_error_key_maps_paused">Your mappings are paused!</string>
    <string name="home_error_key_maps_paused_button">Unpause</string>
    <string name="header_click_type">Click type</string>
    <string name="radio_button_and">AND</string>
    <string name="radio_button_or">OR</string>
    <string name="clicktype_short_press">Short press</string>
    <string name="clicktype_long_press">Long press</string>
    <string name="clicktype_double_press">Double press</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_all">Select all</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_disable_all_keymaps">Disable all</string>
    <string name="action_enable_all_keymaps">Enable all</string>
    <string name="action_change_keyboard">Show input method picker</string>
    <string name="button_done">Done</string>
    <string name="button_save">Save</string>
    <string name="button_add_constraint">Add constraint</string>
    <string name="button_help">Help</string>
    <string name="button_edit_action">Edit action</string>
    <string name="button_replace_action">Replace action</string>
    <string name="error_accessibility_service_enabled">Accessibility service is enabled!</string>
    <string name="error_accessibility_service_disabled">Accessibility service needs to be enabled!</string>
    <string name="warning_need_write_secure_settings_permission">Some features need WRITE_SECURE_SETTINGS permission.</string>
    <string name="fixed_need_write_secure_settings_permission">WRITE_SECURE_SETTINGS permission granted.</string>
    <string name="error_ime_service_disabled_status_layout">Your selected input method needs to be enabled for “Key event”, “Key”, “Text” and some other actions to work.</string>
    <string name="error_ime_service_enabled">A Key Mapper keyboard is enabled!</string>
    <string name="error_critical_ime_service_disabled">A Key Mapper keyboard must be enabled and selected for some of your actions to work!</string>
</resources>