<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.sds100.keymapper.Activities.HomeActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disable_all_keymaps"
        android:title="@string/action_disable_all_keymaps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_enable_all_keymaps"
        android:title="@string/action_enable_all_keymaps"
        app:showAsAction="never" />
</menu>
