<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_enable"
        android:contentDescription="@string/action_enable"
        android:title="@string/action_enable"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disable"
        android:contentDescription="@string/action_disable"
        android:title="@string/action_disable"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:contentDescription="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:contentDescription="@string/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />
</menu>