<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="io.github.sds100.keymapper.data.model.options.TriggerKeyOptions" />

        <variable
            name="viewModel"
            type="io.github.sds100.keymapper.data.viewmodel.TriggerKeyOptionsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/epoxyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/textViewRadioGroupHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_padding_left"
                android:paddingTop="8dp"
                android:text="@string/header_click_type"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="14sp"
                android:visibility="@{viewModel.options.clickType.isAllowed ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:visibility="@{viewModel.options.clickType.isAllowed ? View.VISIBLE : View.GONE}">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={viewModel.shortPress}"
                    android:text="@string/clicktype_short_press" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={viewModel.longPress}"
                    android:text="@string/clicktype_long_press" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={viewModel.doublePress}"
                    android:text="@string/clicktype_double_press" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonHelp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.openHelpUrl()}"
                android:text="@string/button_help" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.save()}"
                android:text="@string/button_save" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
