<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="io.github.sds100.keymapper.data.viewmodel.ConfigKeymapViewModel" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ConfigKeymapViewModel" />

        <variable
            name="onAddConstraintClick"
            type="View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/epoxyRecyclerViewConstraints"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="@{viewModel.constraintList.empty ? View.GONE : View.VISIBLE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/RecyclerViewPlaceholderTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/constraints_recyclerview_placeholder"
                android:visibility="@{viewModel.constraintList.empty ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardview_padding_left"
                android:layout_marginEnd="@dimen/cardview_padding_right"
                android:layout_marginBottom="@dimen/cardview_padding_bottom"
                android:orientation="horizontal"
                android:visibility="@{viewModel.constraintList.size() &lt; 2 ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/buttonAddConstraints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonAnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="@={viewModel.constraintAndMode}"
                    android:text="@string/radio_button_and" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonOr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="@={viewModel.constraintOrMode}"
                    android:text="@string/radio_button_or" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonAddConstraints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:onClick="@{onAddConstraintClick}"
                android:text="@string/button_add_constraint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>